cluster/apps/monitoring/smokeping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app.kubernetes.io/name: smokeping
    app.kubernetes.io/instance: smokeping
    app.kubernetes.io/part-of: smokeping
    app.kubernetes.io/version: "2.7.3"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: chart
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - "smokeping.${SECRET_DOMAIN}"
      secretName: tls.smokeping
  rules:
    - host: "smokeping.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokeping
                port:
                  number: 80
